--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=BS-01344;Database=OnlineShop;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=BS-01344;Database=OnlineShop;Trusted_Connection=True;TrustServerCertificate=True",
+    "OnlineShopContextConnection": "Server=(localdb)\\mssqllocaldb;Database=OnlineShop;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
